# GitScribe

./: README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yaml  test.yaml
gitscribe/: backend.py  claude_backend.py  commands.py  config.py  main.py  ollama_backend.py  prompts.py  server.py
tests/: conftest.py  test_backends.py  test_commands.py  test_mcp.py
