[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitscribe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
build = ["pyinstaller"]
test = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
gitscribe = "gitscribe.main:run"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
